--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Webpack2.0</title>
+    <title>MobX - MedJS</title>
 </head>
 <body>
     <div id="app"></div>
